# agents

1_foundations/community_contributions/Hareesh_Debugger agent/: .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt  tools.py
3_crew/community_contributions/Mikeaig4real/faith_debate/: pyproject.toml
3_crew/community_contributions/Mikeaig4real/faith_debate/src/faith_debate/: crew.py  main.py
3_crew/community_contributions/Mikeaig4real/faith_debate/src/faith_debate/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/SX_wk3_solution/sx_debate/: README.md  pyproject.toml
3_crew/community_contributions/SX_wk3_solution/sx_debate/src/sx_debate/: crew.py  main.py
3_crew/community_contributions/SX_wk3_solution/sx_debate/src/sx_debate/config/: agents.yaml
3_crew/community_contributions/a3_igniters_amitb/market_researcher/: .gitignore  pyproject.toml
3_crew/community_contributions/a3_igniters_amitb/market_researcher/src/market_researcher/: crew.py  main.py
3_crew/community_contributions/a3_igniters_amitb/market_researcher/src/market_researcher/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/a3_igniters_ebenhays/bitsnbites/: .gitignore  pyproject.toml
3_crew/community_contributions/a3_igniters_ebenhays/bitsnbites/src/bitsnbites/: crew.py  main.py
3_crew/community_contributions/a3_igniters_ebenhays/bitsnbites/src/bitsnbites/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/a3_igniters_sodiq/marketing_team/: pyproject.toml
3_crew/community_contributions/a3_igniters_sodiq/marketing_team/src/marketing_team/: crew.py  main.py
3_crew/community_contributions/a3_igniters_sodiq/marketing_team/src/marketing_team/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/a3_igniters_sodiq/marketing_team/src/marketing_team/tools/: image_gen_tool.py
3_crew/community_contributions/adetayo/event_research/: pyproject.toml
3_crew/community_contributions/adetayo/event_research/src/event_research/: crew.py  main.py
3_crew/community_contributions/adetayo/event_research/src/event_research/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/adetayo/event_research/src/event_research/tools/: custom_tool.py  firebase.py
3_crew/community_contributions/assignment_creator/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
3_crew/community_contributions/assignment_creator/src/homeworker/: crew.py  main.py
3_crew/community_contributions/assignment_creator/src/homeworker/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/assignment_creator/src/homeworker/tools/: sendgrid_tool.py
3_crew/community_contributions/blt909/homepage_builder/: README.md  pyproject.toml
3_crew/community_contributions/blt909/homepage_builder/src/homepage_builder/: crew.py  main.py
3_crew/community_contributions/blt909/homepage_builder/src/homepage_builder/config/: build_review_agents.yaml  build_review_tasks.yaml  researcher_agents.yaml  researcher_tasks.yaml  scraper_agents.yaml  (+1 more)
3_crew/community_contributions/codypharm/health_aid/: pyproject.toml
3_crew/community_contributions/codypharm/health_aid/src/health_aid/: crew.py  main.py  schema.py
3_crew/community_contributions/gomezc08/coder/: .gitignore  pyproject.toml
3_crew/community_contributions/gomezc08/coder/src/coder/: crew.py  main.py
3_crew/community_contributions/gomezc08/swe_team/: .gitignore  pyproject.toml
3_crew/community_contributions/gomezc08/swe_team/src/swe_team/: crew.py  guardrails.py  main.py
3_crew/community_contributions/gomezc08/university_picker/: .gitignore  pyproject.toml
3_crew/community_contributions/gomezc08/university_picker/src/university_picker/: crew.py  main.py
3_crew/community_contributions/haastrupea/startup_idea_brainstormer/: README.md  pyproject.toml
3_crew/community_contributions/haastrupea/startup_idea_brainstormer/src/startup_idea_brainstormer/: crew.py  main.py
3_crew/community_contributions/igniters_olawale/: pyproject.toml
3_crew/community_contributions/igniters_olawale/src/igniters_olawale/: crew.py  main.py
3_crew/community_contributions/igniters_olawale/src/igniters_olawale/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/ijosh/: pyproject.toml
3_crew/community_contributions/ijosh/src/digitalfarm_team/: crew.py  main.py
3_crew/community_contributions/ijosh/src/digitalfarm_team/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/incident_postmortem/: .env.example  README.md  pyproject.toml
3_crew/community_contributions/incident_postmortem/knowledge/: user_preference.txt
3_crew/community_contributions/incident_postmortem/src/incident_postmortem/: crew.py  main.py
3_crew/community_contributions/incident_postmortem/src/incident_postmortem/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/johnerick_eng_team/advanced_engineering_team/: .gitignore  pyproject.toml
3_crew/community_contributions/johnerick_eng_team/advanced_engineering_team/src/advanced_engineering_team/: __init__.py  crew.py  main.py
3_crew/community_contributions/leadership_calibration/: README.md  pyproject.toml
3_crew/community_contributions/leadership_calibration/src/leadership_calibration/: app.py  crew.py  debate_runner.py  main.py
3_crew/community_contributions/leadership_calibration/src/leadership_calibration/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/leadership_calibration/src/leadership_calibration/output/: architect.md  conclusion.md  manager.md
3_crew/community_contributions/ngx_analyst/: pyproject.toml
3_crew/community_contributions/ngx_analyst/src/ngx_analyst/: crew.py  main.py
3_crew/community_contributions/ngx_analyst/src/ngx_analyst/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/sam__/news_writer/: README.md  pyproject.toml
3_crew/community_contributions/sam__/news_writer/src/news_writer/: crew.py  main.py
3_crew/community_contributions/stellaoiro/hali_crew/: .gitignore  README.md  pyproject.toml
3_crew/community_contributions/stellaoiro/hali_crew/src/hali_crew/: crew.py  main.py
(+1183 files in other folders)
