[project]
name = "igniters_olawale"
version = "0.1.0"
description = "igniters_olawale using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
igniters_olawale = "igniters_olawale.main:run"
run_crew = "igniters_olawale.main:run"
train = "igniters_olawale.main:train"
replay = "igniters_olawale.main:replay"
test = "igniters_olawale.main:test"
run_with_trigger = "igniters_olawale.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
