[project]
name = "digitalfarm_team"
version = "0.1.0"
description = "digitalfarm_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
digitalfarm_team = "digitalfarm_team.main:run"
run_crew = "digitalfarm_team.main:run"
train = "digitalfarm_team.main:train"
replay = "digitalfarm_team.main:replay"
test = "digitalfarm_team.main:test"
run_with_trigger = "digitalfarm_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
