[project]
name = "incident_postmortem"
version = "0.1.0"
description = "Blameless incident postmortem crew using crewAI"
authors = [{ name = "Community", email = "community@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
incident_postmortem = "incident_postmortem.main:run"
run_crew = "incident_postmortem.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
