[project]
name = "leadership_calibration"
version = "0.1.0"
description = "Leadership Calibration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "gradio>=6.8.0",
]

[project.scripts]
leadership_calibration = "leadership_calibration.main:run"
run_crew = "leadership_calibration.main:run"
train = "leadership_calibration.main:train"
replay = "leadership_calibration.main:replay"
test = "leadership_calibration.main:test"
run_with_trigger = "leadership_calibration.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
