[project]
name = "bitsnbites"
version = "0.1.0"
description = "BitsnBites - The food blog agent using crewAI"
authors = [{ name = "Ebenezer Casely Hayford", email = "" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0"
]

[project.scripts]
bitsnbites = "bitsnbites.main:run"
run_crew = "bitsnbites.main:run"
train = "bitsnbites.main:train"
replay = "bitsnbites.main:replay"
test = "bitsnbites.main:test"
run_with_trigger = "bitsnbites.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
