[project]
name = "marketing_team"
version = "0.1.0"
description = "marketing_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
marketing_team = "marketing_team.main:run"
run_crew = "marketing_team.main:run"
train = "marketing_team.main:train"
replay = "marketing_team.main:replay"
test = "marketing_team.main:test"
run_with_trigger = "marketing_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
