[project]
name = "homepage_builder"
version = "0.1.0"
description = "homepage_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.10.1",
    "firecrawl-py>=4.19.0",
]

[project.scripts]
homepage_builder = "homepage_builder.main:run"
run_crew = "homepage_builder.main:run"
train = "homepage_builder.main:train"
replay = "homepage_builder.main:replay"
test = "homepage_builder.main:test"
run_with_trigger = "homepage_builder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
