[project]
name = "health_aid"
version = "0.1.0"
description = "health_aid using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
health_aid = "health_aid.main:run"
run_crew = "health_aid.main:run"
train = "health_aid.main:train"
replay = "health_aid.main:replay"
test = "health_aid.main:test"
run_with_trigger = "health_aid.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"


[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
override-dependencies = [
    "onnxruntime>=1.18.0,<1.24"
]
