[project]
name = "swe_team"
version = "0.1.0"
description = "swe_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "gradio>=6.8.0",
]

[project.scripts]
swe_team = "swe_team.main:run"
run_crew = "swe_team.main:run"
train = "swe_team.main:train"
replay = "swe_team.main:replay"
test = "swe_team.main:test"
run_with_trigger = "swe_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
