[project]
name = "university_picker"
version = "0.1.0"
description = "university_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
university_picker = "university_picker.main:run"
run_crew = "university_picker.main:run"
train = "university_picker.main:train"
replay = "university_picker.main:replay"
test = "university_picker.main:test"
run_with_trigger = "university_picker.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
