[project]
name = "advanced_engineering_team"
version = "0.1.0"
description = "advanced_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "gradio>=5.22.0",
    "onnxruntime>=1.14.1,<1.23.0",
     "lancedb<0.20.0",

]

[project.scripts]
engineering_team = "advanced_engineering_team.main:run"
run_crew = "advanced_engineering_team.main:run"
train = "advanced_engineering_team.main:train"
replay = "advanced_engineering_team.main:replay"
test = "advanced_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

