[project]
name = "news_writer"
version = "0.1.0"
description = "news_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
news_writer = "news_writer.main:run"
run_crew = "news_writer.main:run"
train = "news_writer.main:train"
replay = "news_writer.main:replay"
test = "news_writer.main:test"
run_with_trigger = "news_writer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
