[project]
name = "hali_crew"
version = "0.1.0"
description = "hali_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
hali_crew = "hali_crew.main:run"
run_crew = "hali_crew.main:run"
train = "hali_crew.main:train"
replay = "hali_crew.main:replay"
test = "hali_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
